--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "navigate": "^0.3.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-history-router": "^1.4.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-stripe-checkout": "^2.6.3",
     "styled-components": "^5.3.3",
+    "use": "^3.1.1",
+    "use-history": "^1.4.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
