--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-share": "^4.4.0",
     "react-stripe-checkout": "^2.6.3",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.3",
     "use": "^3.1.1",
     "use-history": "^1.4.1",
